--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.2",
+    "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
     "jscodeshift": "^0.14.0",
     "localforage": "^1.10.0",
@@ -29,11 +30,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-app-rewired start", 
-    "build": "react-app-rewired build", 
-    "test": "react-app-rewired test", 
-    "eject": "react-scripts eject" 
-    
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
