--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@types/node": "^16.18.12",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/react-redux": "^7.1.25",
     "@types/react-resizable": "3.0.3",
     "@uiw/react-md-editor": "2.1.1",
-    "axios": "^1.3.2",
+    "axios": "^1.3.4",
     "bulmaswatch": "^0.8.1",
     "esbuild-wasm": "0.8.27",
     "jscodeshift": "^0.14.0",
@@ -26,8 +27,11 @@
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-resizable": "3.0.4",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
